# couchdb

./: .gitignore  configure.ac
src/: Makefile.am
src/couch_pb_api/: Makefile.am
src/couch_pb_api/ebin/: couch_pb_api.app
src/couch_pb_api/src/: couch_pb_api_app.erl  couch_pb_api_listener.erl  couch_pb_api_server.erl  couch_pb_api_sup.erl
src/fauxton/app/addons/documents/: routes.js  views.js
src/fauxton/app/addons/documents/assets/less/: documents.less
src/fauxton/app/addons/documents/templates/: add_new_ddoc_fn_dropdown.html  advanced_options.html  design_doc_menu.html  index_menu_item.html  sidebar.html
src/fauxton/assets/less/: fauxton.less  variables.less
src/fauxton/assets/less/bootstrap/: dropdowns.less
src/protobuffs/: Makefile.am
src/protobuffs/src/: protobuffs.app.in
utils/: Makefile.am
